...
    var addNoteButton: some View {
        Button(action: {
            router.navigate(to: .push(.newNote))
        }) {
            
            HStack {
                Text("Add Note")
                    .font(.headline)
                    .foregroundColor(themeManager.current.textPrimary)
                    .frame(height: 40)
                    .padding(5)
            }
            .padding(.horizontal, 10)
...
            )
        }
    }
    
    var searchBar: some View {
        SearchBar(
            titleSearch: "Search notes...",
            searchText: Binding(
                get: { viewModel.searchState.searchText.text },
                set: { newText in
                    viewModel.updateSearch(newText)
                }
            ),
...
